HVAC Backup 2/objects/Locality_SubLocality_Data__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <label>Locality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bihar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Locality__c</fullName>
        <label>Sub Locality</label>
        <type>TextArea</type>
    </fields>
    <label>Locality/SubLocality Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Locality__c</columns>
        <columns>Sub_Locality__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Locality/SubLocality Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locality/SubLocality Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>